--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Import Design System */
+@import './lib/styles/design-system.css';
